@@ -19,7 +19,7 @@ type_property_map = {
 }
 
 
-def get_channel(channel_id=None, channel_url=None, limit=None, sleep=1, content_type='videos', sort_by="newest"):
+def get_channel(channel_id=None, channel_url=None, channel_username=None, limit=None, sleep=1, content_type='videos', sort_by="newest"):
 
     """Get videos for a channel.
 
@@ -32,6 +32,11 @@ def get_channel(channel_id=None, channel_url=None, limit=None, sleep=1, content_
             The url to the channel you want to get the videos for.
             Since there is a few type's of channel url's, you can use the one you want
             by passing it here instead of using ``channel_id``.
+
+        channel_username (``str``, *optional*):
+            The username from the channel you want to get the videos for.
+            Ex. ``LinusTechTips`` (without the @).
+            If you prefer to use the channel url instead, see ``channel_url`` above.
 
         limit (``int``, *optional*):
             Limit the number of videos you want to get.
@@ -51,12 +56,23 @@ def get_channel(channel_id=None, channel_url=None, limit=None, sleep=1, content_
     """
 
     sort_by_map = {"newest": "dd", "oldest": "da", "popular": "p"}
-    url = "{url}/{content_type}?view=0&sort={sort_by}&flow=grid".format(
-        url=channel_url or "https://www.youtube.com/channel/{channel_id}".format(channel_id=channel_id),
-        content_type=content_type, sort_by=sort_by_map[sort_by]
+
+    base_url = ""
+    if channel_url:
+        base_url = channel_url
+    elif channel_id:
+        base_url = "https://www.youtube.com/channel/{channel_id}".format(channel_id=channel_id)
+    elif channel_username:
+        base_url = "https://www.youtube.com/@{channel_username}".format(channel_username=channel_username)
+
+    url = "{base_url}/{content_type}?view=0&flow=grid".format(
+        base_url=base_url,
+        content_type=content_type
     )
+
     api_endpoint = "https://www.youtube.com/youtubei/v1/browse"
-    videos = get_videos(url, api_endpoint, type_property_map[content_type], limit, sleep)
+
+    videos = get_videos(url, api_endpoint, type_property_map[content_type], limit, sleep, sort_by)
     for video in videos:
         yield video
 
@@ -138,14 +154,33 @@ def get_search(query, limit=None, sleep=1, sort_by="relevance", results_type="vi
         yield video
 
 
-def get_videos(url, api_endpoint, selector, limit, sleep):
+def get_video(id):
 
-    session = requests.Session()
-    session.headers[
-        "User-Agent"
-    ] = "Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:108.0) Gecko/20100101 Firefox/108.0"
+    """Get a single video.
+    Parameters:
+        id (``str``):
+            The video id from the video you want to get.
+    """
+
+    session = get_session()
+    url = "https://www.youtube.com/watch?v={id}".format(id=id)
+    html = get_initial_data(session, url)
+    client = json.loads(
+        get_json_from_html(html, "INNERTUBE_CONTEXT", 2, '"}},') + '"}}'
+    )["client"]
+    session.headers["X-YouTube-Client-Name"] = "1"
+    session.headers["X-YouTube-Client-Version"] = client["clientVersion"]
+    data = json.loads(
+        get_json_from_html(html, "var ytInitialData = ", 0, "};") + "}"
+    )
+    return next(search_dict(data, "videoPrimaryInfoRenderer"))
+
+
+def get_videos(url, api_endpoint, selector, limit, sleep, sort_by):
+
+    session = get_session()
     is_first = True
-    _quit = False
+    quit_it = False
     count = 0
 
     while 1:
@@ -162,24 +197,26 @@ def get_videos(url, api_endpoint, selector, limit, sleep):
             )
             next_data = get_next_data(data)
             is_first = False
+            if sort_by and sort_by != "newest": 
+                continue
 
         else:
 
             data = get_ajax_data(session, api_endpoint, api_key, next_data, client)
-            next_data = get_next_data(data)
+            next_data = get_next_data(data, sort_by)
 
         for result in get_videos_items(data, selector):
             try:
                 count += 1
                 yield result
                 if count == limit:
-                    _quit = True
+                    quit_it = True
                     break
             except GeneratorExit:
-                _quit = True
+                quit_it = True
                 break
 
-        if not next_data or _quit:
+        if not next_data or quit_it:
             break
 
         time.sleep(sleep)
@@ -189,7 +226,7 @@ def get_videos(url, api_endpoint, selector, limit, sleep):
 
 def get_initial_data(session, url):
     session.cookies.set("CONSENT", "YES+cb", domain=".youtube.com")
-    response = session.get(url)
+    response = session.get(url, params={"ucbcb":1})
     if "uxe=" in response.request.url:
         session.cookies.set("CONSENT", "YES+cb", domain=".youtube.com")
         response = session.get(url)
@@ -239,6 +276,42 @@ def search_dict(partial, search_key):
             for value in current_item:
                 stack.append(value)
 
+def get_next_data(data, sort_by=None):
+
+    # Youtube, please don't change the order of these
+
+    sort_by_map = {
+        "newest": 0, 
+        "popular": 1,
+        "oldest": 2, 
+    }
+    if sort_by and sort_by != "newest":
+        endpoint = next(
+            search_dict(data, "feedFilterChipBarRenderer"), None
+        )["contents"][sort_by_map[sort_by]]["chipCloudChipRenderer"]["navigationEndpoint"]
+    else:
+        endpoint = next(search_dict(data, "continuationEndpoint"), None)
+    if not endpoint:
+        return None
+    next_data = {
+        "token": endpoint["continuationCommand"]["token"],
+        "click_params": {"clickTrackingParams": endpoint["clickTrackingParams"]},
+    }
+
+    return next_data
+
+
+def get_session():
+    session = requests.Session()
+    session.headers[
+        "User-Agent"
+    ] = "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/114.0.0.0 Safari/537.36"
+    session.headers["Accept-Language"] = "en"
+    return session
+
 
 def get_videos_items(data, selector):
     return search_dict(data, selector)
+
+
+__all__ = ['']
